# projeto-lpf

./: .editorconfig  .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  projeto-lpf.cabal
app/: Main.hs
bank/: package.yaml
src/: Bank.hs  Cadastro.hs  Cliente.hs  Main.hs  Test.hs
src/CLI/: Inputs.hs  Layout.hs  Pages.hs
src/Objects/: Client.hs
src/Utils/: System.hs
