name: projeto-lpf
version: 0.1.0.0
license: MIT
license-file: LICENSE
category: System
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10
executable projeto-lpf
    hs-source-dirs: src
    default-language: Haskell2010
    main-is: Main.hs
    other-modules:
        CLI.Pages
        Utils.System
    build-depends:
        base >=4.11 && <4.12,
        process
